# codinrust

./: .gitignore  README.md  compile_all.sh  do_all.sh
odin_bin/: README.md  dynamic_loading.odin  main.odin  run.sh  static_loading.odin
odin_bin_static_loading/: main.odin  run.sh
odin_dynamiclib/: build.sh  odin_dynamiclib.odin
odin_lib/: README.md  build.sh  odin_lib.odin
rust_bin/: Cargo.toml  README.md  build.rs  run.sh
rust_bin/src/: dynamic_loading.rs  main.rs  static_loading.rs
rust_bin_dynamic_loading/: Cargo.toml  run.sh
rust_bin_dynamic_loading/src/: main.rs
rust_bin_dynamicload/: Cargo.toml
rust_bin_dynamicload/src/: main.rs
rust_dynamiclib/: Cargo.toml  build.sh
rust_dynamiclib/src/: lib.rs
rust_lib/: Cargo.toml  README.md  build.sh
rust_lib/src/: lib.rs
rust_lib/src/examples/: rust_lib_shared.rs  rust_lib_static.rs
rust_lib_dynamic/: Cargo.toml  build.sh
rust_lib_dynamic/src/: lib.rs
rust_lib_shared/: Cargo.toml  build.sh
rust_lib_shared/src/: lib.rs
rust_lib_static/: Cargo.toml  build.sh
rust_lib_static/src/: lib.rs
rust_staticlib/: Cargo.toml  build.sh
rust_staticlib/src/: lib.rs
